app/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

h3 {
  margin-bottom: 0.5rem;
}

.button {
  background-color: var(--color-blue-500);
  color: var(--color-white);
  padding: 0.5rem 1rem;
  border-radius: var(--radius-md);
  text-decoration: none;
  display: inline-block;
}

.thumbnail {
  width: 100%;
  height: auto;
  border-radius: var(--radius-lg);
}

.caption {
  font-size: 0.875rem;
  margin: 1.5rem;
}

.search-bar {
  flex-grow: 1;
  flex-direction: row;
  max-width: var(--container-lg);
}

.space-evenly {
  display: flex;
  justify-content: space-evenly;
}

